--- a/Frontend/app/src/main/res/layout/friend_item.xml
+++ b/Frontend/app/src/main/res/layout/friend_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:drawable/editbox_background_normal"
-    android:backgroundTint="#4CAF50"
+    android:backgroundTint="#FFFFFF"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="20dp"
@@ -25,8 +25,9 @@
         android:layout_gravity="center|left"
         android:layout_marginRight="50dp"
         android:layout_weight="1"
-        android:backgroundTint="#4CAF50"
-        android:text="Button" />
+        android:backgroundTint="#FFFFFF"
+        android:text="Button"
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/view"
