--- a/Frontend/app/src/main/res/layout/activity_rules.xml
+++ b/Frontend/app/src/main/res/layout/activity_rules.xml
@@ -140,17 +140,6 @@
                     android:src="@drawable/duke"
                     android:contentDescription="@string/duke" />
 
-                <!-- Ambassador Card -->
-                <ImageButton
-                    android:id="@+id/ambassador"
-                    android:layout_width="165dp"
-                    android:layout_height="220dp"
-                    android:layout_margin="16dp"
-                    android:background="@null"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/mitra"
-                    android:contentDescription="@string/ambassador" />
-
                 <!-- Contra Card -->
                 <ImageButton
                     android:id="@+id/contra"
@@ -159,7 +148,18 @@
                     android:layout_margin="16dp"
                     android:background="@null"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/mitra"
+                    android:src="@drawable/contra"
+                    android:contentDescription="@string/ambassador" />
+
+                <!-- Ambassador Card -->
+                <ImageButton
+                    android:id="@+id/ambassador"
+                    android:layout_width="165dp"
+                    android:layout_height="220dp"
+                    android:layout_margin="16dp"
+                    android:background="@null"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ambassador"
                     android:contentDescription="@string/contra" />
 
             </LinearLayout>
