changes in java docs, added last 2 cards, changes in ui

--- a/Frontend/app/src/main/res/layout/activity_admin_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_admin_menu.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A8E3FD">
+    android:background="#000000">
 
     <!-- Side panel for ImageButtons -->
 
     <!-- Central button panel -->
     <Space
+        android:id="@+id/space"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@+id/central_panel"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="350dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="350dp" />
 
     <LinearLayout
         android:id="@+id/side_panel"
@@ -76,7 +77,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.06999999">
 
         <Button
             android:id="@+id/play_btn"
@@ -118,5 +120,16 @@
             android:textColor="#000000"
             tools:ignore="HardcodedText" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="195dp"
+        android:layout_height="132dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.16000003"
+        app:srcCompat="@drawable/icon_assassin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
