--- a/Frontend/app/src/main/res/layout/activity_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_menu.xml
@@ -76,7 +76,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.01999998">
 
         <Button
             android:id="@+id/play_btn"
@@ -118,5 +119,16 @@
             android:textColor="#000000"
             tools:ignore="HardcodedText" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="288dp"
+        android:layout_height="148dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.17000002"
+        app:srcCompat="@drawable/icon_captain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
