added code to show users in LobbyActivity

--- a/Frontend/app/src/main/res/layout/activity_aftercreatelobby.xml
+++ b/Frontend/app/src/main/res/layout/activity_aftercreatelobby.xml
@@ -5,20 +5,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-16dp">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:layout_editor_absoluteX="-16dp">-->
 
-        <TextView
-            android:id="@+id/tx1"
+<!--        <TextView-->
+<!--            android:id="@+id/tx1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:text="The players will appear here:\n"-->
+<!--            android:textSize="20dp" />-->
+<!--        -->
+
+<!--    </ScrollView>-->
+
+
+    <ScrollView
+        android:id="@+id/scrollViewMessages"
+        android:layout_width="match_parent"
+        android:layout_height="700dp"
+        android:layout_weight="1"
+        android:background="@null"
+        android:backgroundTint="#FFFFFF"
+        android:contentDescription="zone in reach the content of messages that is layed out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498">
+
+        <LinearLayout
+            android:id="@+id/layoutMessages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="The players will appear here:\n"
-            android:textSize="20dp" />
-
+            android:orientation="vertical">
+            <!-- Messages will be added here dynamically -->
+        </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
