--- a/Frontend/app/src/main/res/values/colors.xml
+++ b/Frontend/app/src/main/res/values/colors.xml
@@ -7,8 +7,36 @@
     <color name="gold">#FFD700</color>
     <color name="silver">#C0C0C0</color>
     <color name="bronze">#CD7F32</color>
-    <color name="defaultBackground">#E0E0E0</color> <!-- Your default color -->
+    <color name="defaultBackground">#009688</color>
     <color name="active_green">#4CAF50</color>
     <color name="inactive_red">#FF9898</color>
-
+    <color name="md_theme_light_primary">#6750A4</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#EADDFF</color>
+    <color name="md_theme_light_onPrimaryContainer">#21005D</color>
+    <color name="md_theme_light_error">#B3261E</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_errorContainer">#F9DEDC</color>
+    <color name="md_theme_light_onErrorContainer">#410E0B</color>
+    <color name="md_theme_light_surface">#FFFBFE</color>
+    <color name="md_theme_light_onSurface">#1C1B1F</color>
+    <color name="md_theme_light_surfaceVariant">#E7E0EC</color>
+    <color name="md_theme_dark_primary">#D0BCFF</color>
+    <color name="md_theme_dark_onPrimary">#381E72</color>
+    <color name="md_theme_dark_primaryContainer">#4F378B</color>
+    <color name="md_theme_dark_onPrimaryContainer">#EADDFF</color>
+    <color name="md_theme_dark_secondary">#CCC2DC</color>
+    <color name="md_theme_dark_onSecondary">#332D41</color>
+    <color name="md_theme_dark_secondaryContainer">#4A4458</color>
+    <color name="md_theme_dark_onSecondaryContainer">#665E70</color> <!-- Lighter purple for visibility in dark theme -->
+    <color name="md_theme_dark_error">#CF6679</color> <!-- Material Design dark theme error color -->
+    <color name="md_theme_dark_onError">#FFFFFF</color> <!-- White text on error backgrounds -->
+    <color name="md_theme_dark_errorContainer">#B3261E</color> <!-- Slightly darker red for error containers -->
+    <color name="md_theme_dark_onErrorContainer">#FFDAD4</color> <!-- Light red for text on error containers -->
+    <color name="md_theme_dark_surface">#121212</color> <!-- Common dark theme surface color -->
+    <color name="md_theme_dark_onSurfaceVariant">#E6E1E5</color> <!-- Light grey for text on dark surfaces -->
+    <color name="md_theme_dark_onSurface">#E6E1E5</color>
+    <color name="md_theme_dark_surfaceVariant">#49454F</color>
+    <color name="md_theme_light_onBackground">#121212</color> <!-- Typically a dark color for light theme backgrounds -->
+    <color name="md_theme_dark_onBackground">#E6E1E5</color> <!-- Typically a light color for dark theme backgrounds -->
 </resources>
