--- a/Frontend/app/src/main/res/layout/activity_friends.xml
+++ b/Frontend/app/src/main/res/layout/activity_friends.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D1FAD3"
-    android:orientation="vertical"
+     android:orientation="vertical"
     tools:context=".FriendsActivity">
 
     <RelativeLayout
@@ -21,17 +20,14 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
-            android:backgroundTint="#FFFFFF"
-            android:text="Exit"
-            android:textColor="#000000" />
+             android:text="Exit"  />
 
         <TextView
             android:id="@+id/friends_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@android:drawable/editbox_background"
-            android:text="  Friends  "
+             android:text="  Friends  "
             android:textSize="24sp"
             android:textStyle="bold" />
 
