--- a/Frontend/app/src/main/res/layout/activity_admin_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_admin_menu.xml
@@ -70,8 +70,10 @@
 
     <LinearLayout
         android:id="@+id/central_panel"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,18 +84,18 @@
         app:layout_constraintVertical_bias="0.06999999">
 
         <Button
-            android:id="@+id/play_btn"
-            android:layout_width="200dp"
+            android:id="@+id/game"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:backgroundTint="#FFFFFF"
-            android:text="Play Game"
+            android:text="Game"
             android:textColor="#000000"
             tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/rules_btn"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:backgroundTint="#FFFFFF"
@@ -103,7 +105,7 @@
 
         <Button
             android:id="@+id/stats_btn"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:backgroundTint="#FFFFFF"
@@ -112,12 +114,12 @@
             tools:ignore="HardcodedText" />
 
         <Button
-            android:id="@+id/friends_btn"
-            android:layout_width="200dp"
+            android:id="@+id/list_btn"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:backgroundTint="#FFFFFF"
-            android:text="Friends"
+            android:text="Players"
             android:textColor="#000000"
             tools:ignore="HardcodedText" />
     </LinearLayout>
@@ -132,5 +134,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16000003"
         app:srcCompat="@drawable/icon_assassin" />
+
+    <EditText
+        android:id="@+id/editTextTime"
+        android:layout_width="209dp"
+        android:layout_height="102dp"
+        android:ems="10"
+        android:inputType="time"
+        android:shadowColor="#FFFFFF"
+        android:text="ADMIN"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/central_panel"
+        app:layout_constraintVertical_bias="0.267" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
