--- a/Frontend/app/src/main/res/layout/activity_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_menu.xml
@@ -78,7 +78,7 @@
         app:layout_constraintVertical_bias="0.01999998">
 
         <Button
-            android:id="@+id/play_btn"
+            android:id="@+id/game"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -102,7 +102,7 @@
              tools:ignore="HardcodedText" />
 
         <Button
-            android:id="@+id/friends_btn"
+            android:id="@+id/list_btn"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
