--- a/Frontend/app/src/main/res/layout/activity_admin_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_admin_menu.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    android:background="#000000">
+    android:animateLayoutChanges="true">
 
     <!-- Side panel for ImageButtons -->
 
@@ -88,9 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#FFFFFF"
             android:text="Game"
-            android:textColor="#000000"
             tools:ignore="HardcodedText" />
 
         <Button
@@ -98,9 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#FFFFFF"
             android:text="Rules"
-            android:textColor="#000000"
             tools:ignore="HardcodedText" />
 
         <Button
@@ -108,9 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#FFFFFF"
             android:text="Stats"
-            android:textColor="#000000"
             tools:ignore="HardcodedText" />
 
         <Button
@@ -118,9 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#FFFFFF"
             android:text="Players"
-            android:textColor="#000000"
             tools:ignore="HardcodedText" />
     </LinearLayout>
 
@@ -141,11 +132,8 @@
         android:layout_height="102dp"
         android:ems="10"
         android:inputType="time"
-        android:shadowColor="#FFFFFF"
         android:text="ADMIN"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textColorLink="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
